--- a/earthangel-frontend/src/index.css
+++ b/earthangel-frontend/src/index.css
@@ -1,8 +1,61 @@
-body {
-  background-image: url("images/a.jpg");
+@import url("https://fonts.googleapis.com/css2?family=Benne&display=swap");
+
+.header {
+  font-family: "Benne", serif;
+  padding: 5px;
+  background-color: #f8f9fa;
+}
+
+.main-page {
+  background-image: url("images/mainpage.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
   min-height: 100vh;
   margin: 0;
+  filter: grayscale(100%);
+  font-family: "Benne", serif;
+}
+
+.main-card {
+  background-color: black;
+}
+
+.about-page {
+  background-image: url("images/14.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  font-family: "Benne", serif;
+}
+
+.about-card {
+  background-color: #f8f9fa;
+}
+
+.zodiac-page {
+  background-image: url("images/1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  font-family: "Benne", serif;
+}
+
+.journal-page {
+  background-image: url("images/14.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  font-family: "Benne", serif;
+}
+
+.container {
+  background-color: black;
+  padding: 10px;
 }
