--- a/earthangel-frontend/src/index.css
+++ b/earthangel-frontend/src/index.css
@@ -28,8 +28,8 @@ header {
 }
 
 #opening-card {
-  background: transparent;
-  opacity: 0.4;
+  background: rgba(0, 0, 0, 0);
+  color: white;
   border: none;
 }
 
