modified:   src/App.js src/components/JournalEntry.js src/components/PlaySound.js src/index.css

--- a/earthangel-frontend/src/index.css
+++ b/earthangel-frontend/src/index.css
@@ -29,7 +29,7 @@ header {
 
 #opening-card {
   background: rgba(0, 0, 0, 0);
-  color: white;
+  color: whitesmoke;
   border: none;
 }
 
@@ -76,13 +76,7 @@ header {
 
 .zodiac-page {
   background-color: black;
-  /* background-repeat: no-repeat;
-  background-size: cover;
-  width: 100vw;
-  min-height: 100vh;
-  margin: 0; */
   font-family: "Benne", serif;
-  /* padding-top: 60px; */
 }
 
 .card-group {
@@ -111,7 +105,7 @@ header {
   background: transparent;
   color: whitesmoke;
   padding: 20px;
-  margin-top: 500px;
+  margin-top: 300px;
   text-align: center;
 }
 
@@ -133,4 +127,10 @@ header {
   background-color: black;
   opacity: 0.9;
   border: none;
+}
+
+.playsound {
+  background-color: black;
+  color: whitesmoke;
+  font-family: "Benne", serif;
 }
