--- a/earthangel-frontend/src/index.css
+++ b/earthangel-frontend/src/index.css
@@ -7,13 +7,9 @@ header {
   font-family: "Benne", serif;
 }
 
-#navigation {
-  background: transparent;
-  color: black;
-}
-
 .opening-page {
   background-image: url("images/openingpage.gif");
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
@@ -41,6 +37,7 @@ header {
 
 .main-page {
   background-image: url("images/mainpage.jpg");
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
@@ -59,6 +56,7 @@ header {
 
 .about-page {
   background-image: url("images/aboutpage.gif");
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
@@ -76,14 +74,30 @@ header {
 
 .zodiac-page {
   background-color: black;
+  background: url("./images/maybe.gif");
+  background-attachment: fixed;
   font-family: "Benne", serif;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  min-height: 300vh;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
 }
 
 .card-group {
-  min-height: 450px !important;
+  min-height: 50px !important;
+  height: 400px;
+  width: 150px;
   text-align: center;
   opacity: 0.8;
   color: black;
+}
+
+#zodiac-container {
+  background: rgba(0, 0, 0, 0);
 }
 
 .maybe-gif {
@@ -94,6 +108,7 @@ header {
 
 .journal-page {
   background-image: url("images/curves.gif");
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -105,7 +120,8 @@ header {
   background: transparent;
   color: whitesmoke;
   padding: 20px;
-  margin-top: 300px;
+  margin-top: 500px;
+  margin-right: 100px;
   text-align: center;
 }
 
@@ -129,8 +145,31 @@ header {
   border: none;
 }
 
-.playsound {
+.journal-entry {
+  margin: 10px;
+}
+
+div .container {
+  position: absolute;
+  top: 100px;
   background-color: black;
   color: whitesmoke;
+  opacity: 0.9;
+  margin: 10px;
+}
+
+.playsound {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+#playsound-button {
+  background-color: black;
+  opacity: 0.4;
+  color: whitesmoke;
   font-family: "Benne", serif;
+  padding: 5px;
+}
+
+div .card-body {
+  padding: 0;
 }
